<resources>

    <string name="app_name">Iris</string>

    <!--Shared Preferences strings-->
    <string name="shared_pref_file">preferences.xml</string>
    <string name="shared_pref_username_key">username</string>

    <!--Terminology strings-->
    <string name="patient">Patient</string>
    <string name="care_provider">Care Provider</string>

    <!--Main screen strings-->
    <string name="main_title">Iris</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>

    <!--Login screen strings-->
    <string name="login_username_hint">Enter your username</string>
    <string name="login_password_hint">Enter your password</string>
    <string name="login_success">Logging in...</string>
    <string name="login_failure_internet_or_not_found">Couldn\'t log in! Please check internet connection.</string>
    <string name="login_failure">Incorrect login!</string>
    <string name="login_transfer_hint">Enter your transfer code</string>
    <string name="login_transfer_button">Transfer</string>
    <string name="login_transfer_success">Transfer successful!</string>
    <string name="login_transfer_failure">Couldn\'t transfer: wrong code or no internet connection.</string>

    <!-- Register screen strings-->
    <string name="register_title">Register a new profile</string>
    <string name="username_title">Username (minimum 8 characters)</string>
    <string name="password_title">Password</string>
    <string name="phone_title">Phone Number</string>
    <string name="email_title">Email Address</string>
    <string name="register_username_hint">Enter a username</string>
    <string name="register_password_hint">Enter a password</string>
    <string name="register_phone_hint">Enter phone number</string>
    <string name="register_email_hint">Enter email address</string>
    <string name="register_success">User successfully registered!</string>
    <string name="register_incomplete">Please fill in all fields!</string>
    <string name="register_failure">Could not register, username already in use!</string>
    <string name="register_short_username">That username is too short!</string>
    <string name="register_invalid_email">Not a valid email address!</string>
    <string name="register_invalid_phone">Not a valid phone number!</string>

    <!-- Create Problem screen strings-->
    <string name="create_a_problem">Create a Problem</string>
    <string name="enter_a_title_max_30_characters">Enter a title (Max 30 characters)</string>
    <string name="enter_a_description_max_300_characters">Enter a description (Max 300 characters)</string>
    <string name="geo_location">Geo Location</string>
    <string name="add_problem">Add Problem</string>
    <string name="login_register_text">Don\'t have an account?</string>
    <string name="login_register_button_text">" Sign Up"</string>
    <string name="title_activity_add_record">AddRecordActivity</string>
    <string name="add_problem_success">New Problem created!</string>

    <!-- Create Record screen strings-->
    <string name="create_a_record">Create a Record</string>
    <string name="enter_body_location">Enter Body Location</string>
    <string name="label_photos">Label Photos</string>
    <string name="submit_record">Submit Record</string>
    <string name="create_record_error">Error Making Record!</string>
    <string name="add_body_location_submit">Save Body Location</string>

    <!-- View Record List screen strings -->
    <string name="title_activity_view_record">ViewRecordActivity</string>
    <string name="record_list_activity_title">Records</string>
    <string name="edit_record">Edit Record</string>

    <!-- View Problem screen strings-->
    <string name="view_records">View Records</string>
    <string name="create_record">Create Record</string>
    <string name="view_problem_title_text">Title</string>
    <string name="view_problem_date_text">Date</string>
    <string name="view_problem_description_text">Description</string>
    <string name="view_problem_geolocation_text">Geo Location</string>
    <string name="view_problem_title">Viewing a Problem</string>
    <string name="slideshow_button">Slideshow</string>
    <string name="title_activity_problem_slideshow">Slideshow</string>
    <string name="edit_problem">Edit</string>

    <!-- View Record strings -->
    <string name="view_record_title">Viewing a Record</string>
    <string name="record_photos">Photos</string>
    <string name="record_body_location">Body Location</string>

    <!-- View Problem list screen strings-->
    <string name="problem_list_title">Problems</string>
    <string name="problem_list_map_of_all_records">Map of all Records</string>
    <string name="problem_list_edit_problems_text">Edit Problems</string>
    <string name="problem_list_profile_text">Profile</string>
    <string name="problem_list_search_text">Search</string>
    <string name="problem_list_view_problem_hint">"Click on Problem to view"</string>
    <string name="problem_list_edit_problem_hint">"Click on Problem to edit"</string>

    <!-- View Patient list screen strings-->
    <string name="view_patients_title">Viewing all Patients</string>
    <string name="add_patient">Add Patient</string>

    <!-- View Record list screen strings-->
    <string name="record_list_edit_records_text">Edit Records</string>

    <!-- View Problem screen strings-->
    <string name="problem_comments_label">Comments</string>
    <string name="comment_empty_error">Comment Field is Empty!</string>

    <!-- Problem list Toolbar strings-->
    <string name="edit_problems">Edit</string>
    <string name="view_profile">View Profile</string>

    <!-- Edit Problem strings-->
    <string name="edit_problem_title">Edit Problem</string>
    <string name="submit_problem">Submit</string>
    <string name="launch_date_picker">Set Date</string>
    <string name="incorrect_date">Incorrect date format!</string>
    <string name="successful_edit">Problem Edited!</string>
    <string name="edit_problem_failure">"Uh oh something went wrong"</string>

    <!-- Delete Problem strings-->
    <string name="delete_problem_title">Delete Problem</string>
    <string name="delete_problem_hint">Do you want to delete this problem?</string>
    <string name="do_delete_problem">Yes</string>
    <string name="dont_delete_problem">No</string>

    <!-- Edit Profile screen strings-->
    <string name="edit_profile_title">Edit your profile</string>
    <string name="edit_profile_new_email">New Email Address</string>
    <string name="edit_profile_new_phone">New Phone Number</string>
    <string name="edit_profile_title_text">Edit Profile</string>
    <string name="edit_profile_save_changes">Save Changes</string>
    <string name="edit_profile_cancel">Cancel</string>
    <string name="edit_profile_phone_hint">Phone Number</string>
    <string name="edit_profile_email_hint">Email</string>
    <string name="edit_profile_success">Profile updated successfully!</string>
    <string name="edit_profile_failure">Please fill out all fields!</string>

    <!-- View Profile screen strings-->
    <string name="view_profile_username">Username</string>
    <string name="view_profile_title">Profile</string>
    <string name="view_profile_email">Email</string>
    <string name="view_profile_phone">Phone</string>
    <string name="view_profile_edit_profile_button">Edit Profile</string>
    <string name="view_profile_generate_code_button">Generate Transfer Code</string>
    <string name="view_profile_generate_code_toast">Generating transfer code...</string>
    <string name="view_profile_users">Users:</string>
    <string name="view_profile_patients">Patients:</string>
    <string name="view_profile_care_providers">Care Providers:</string>
    <string name="view_profile_user_add_code">User\'s Add Code</string>
    <string name="view_profile_add_code">Add Code</string>

    <!-- Transfer Code dialog strings -->
    <string name="transfer_code_dialog_title">Your transfer code:</string>
    <string name="transfer_code_dialog_hint">Transfer code</string>

    <!-- Add Patient dialog strings -->
    <string name="add_patient_dialog_title">Add a patient by their add code</string>
    <string name="add_patient_dialog_hint">Patient\'s add code</string>

    <!-- Body Photo strings -->
    <string name="add_bodyphoto_submit">Submit Body Photo</string>
    <string name="add_bodyphoto_title_text">Add Body Photo</string>
    <string name="add_bodyphoto_note">To add a Body Photo click on the image</string>
    <string name="body_location_photos">Body Location Photos</string>

    <!-- Map strings -->
    <string name="title_activity_map">Map</string>
    <string name="selected_location">Location</string>
    <string name="map_error">Cannot get current location</string>

    <!-- Add Geolocation fragment strings -->
    <string name="geolocation_frag_title">Add GeoLocation</string>
    <string name="geolocation_frag_message">Do you want to add this location?</string>

    <!-- Permissions strings -->
    <string name="contact_permissions_granted">Contact permissions granted successfully!</string>
    <string name="contact_permissions_not_granted">Contact permissions not granted!</string>

    <!-- Import Contacts strings -->
    <string name="import_contacts_title">Import Contacts as Patients</string>
    <string name="add_contact_button">Add</string>

    <!-- Database-related strings -->
    <string name="generic_server_error">"Uh oh something went wrong"</string>
    <string name="offline_upload_error">Internet disconnected, will upload changes when restored.</string>
    <string name="offline_fetch_error">Internet disconnected, showing local data.</string>
    <string name="offline_fatal_error">Internet disconnected, unable to complete action.</string>
    <string name="pick_body_location_instruction">Click On The Image To Set a Point</string>

    <!-- Search strings -->
    <string name="search_records_label">Records:</string>
    <string name="search_problems_label">Problems:</string>
    <string name="search_default">Search by Keywords...</string>
    <string name="search_geolocation">Search by Geolocation...</string>
    <string name="search_bodylocation">Search by Body Location...</string>
    <string name="search_error_message">Nothing to Search!</string>
    <string name="search_offline_message">Currently Offline, Unable To Search!</string>
    <string name="max_record_photo_message">Sorry! Max of 10 Photos!</string>

    <!-- Search Strings -->
    <string-array name="search_options">
        <item>Keywords (default)</item>
        <item>Geolocation</item>
        <item>BodyLocation</item>
    </string-array>

</resources>