<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Team 7, CMPUT301, University of Alberta - All Rights Reserved. You may use, distribute, or modify this code under terms and conditions of the Code of Students Behavior at University of Alberta
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.AddRecordActivity"
    tools:showIn="@layout/activity_add_record">

    <Button
        android:id="@+id/record_add_problem_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="38dp"
        android:layout_marginTop="178dp"
        android:background="@color/colorAccent"
        android:text="@string/add_record"
        android:textColor="?android:attr/colorBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/record_geolocation_edit_text" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/record_camera_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="300dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/record_geolocation_edit_text"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/record_album_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="236dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/record_camera_button"
        app:layout_constraintTop_toBottomOf="@+id/record_geolocation_edit_text"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/create_record_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/create_a_record"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/record_title_edit_text"
        android:layout_width="296dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_a_title_max_30_characters"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_record_text_view" />

    <EditText
        android:id="@+id/record_body_location_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/enter_body_location"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/record_title_edit_text" />

    <Button
        android:id="@+id/body_location_photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/label_photos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/record_body_location_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/record_title_edit_text" />

    <EditText
        android:id="@+id/record_description_edit_text"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="125dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/enter_a_description_max_300_characters"
        android:inputType="textMultiLine"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/record_body_location_edit_text" />

    <EditText
        android:id="@+id/record_geolocation_edit_text"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="125dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/geo_location"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/record_description_edit_text" />

</android.support.constraint.ConstraintLayout>