<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Team 7, CMPUT301, University of Alberta - All Rights Reserved. You may use, distribute, or modify this code under terms and conditions of the Code of Students Behavior at University of Alberta
  -->
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/problem_title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/enter_a_title_max_30_characters"
            android:inputType="textPersonName"
            android:maxLength="30"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/problem_title_edit_text" />


        <!--<EditText-->
        <!--android:id="@+id/problem_date_select_edit_text"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:ems="10"-->
        <!--android:hint="@string/"-->
        <!--android:inputType="textPersonName"-->
        <!--android:textSize="16sp"-->
        <!--android:layout_marginTop="16dp"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/problem_title_edit_text" />-->

        <EditText
            android:id="@+id/problem_description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/enter_a_description_max_300_characters"
            android:inputType="textMultiLine"
            android:maxLength="300"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/problem_title_edit_text" />


        <Button
            android:id="@+id/problem_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:padding="16dp"
            android:text="@string/add_problem"
            android:textColor="?android:attr/colorBackground" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>